plugins {
    id 'com.android.library'
    id 'org.jetbrains.kotlin.android'
    id 'maven-publish'
    id 'signing'
    id 'jacoco'
    id 'com.github.kt3k.coveralls'
}

description = 'OpenSRP core client library'

group = rootProject.group
version = rootProject.version

jacoco {
    toolVersion = '0.8.10'
}

android {
    namespace 'org.smartregister'
    compileSdk rootProject.ext.androidCompileSdk
    buildToolsVersion rootProject.ext.androidBuildToolsVersion

    defaultConfig {
        minSdk rootProject.ext.androidMinSdk
        targetSdk rootProject.ext.androidTargetSdk
        versionCode Integer.parseInt(project.VERSION_CODE)
        versionName project.VERSION_NAME
        multiDexEnabled true
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'

        buildConfigField 'String', 'VERSION_NAME', '"' + project.VERSION_NAME + '"'
        buildConfigField 'long', 'BUILD_TIMESTAMP', System.currentTimeMillis() + 'L'
        buildConfigField 'int', 'DB_ENCRYPTION_VERSION', '1'
        buildConfigField 'int', 'VERSION_CODE', "${versionCode}"
    }

    buildTypes {
        debug {
            minifyEnabled false
            debuggable true
            buildConfigField 'String', 'TRUST_MANAGER_ALGORITHM', '"X509"'
            buildConfigField 'String', 'SSL_CONTEXT_PROTOCOL', '"TLSv1.2"'
            buildConfigField 'String', 'OPENSRP_TRUSTORE_PASS', '"phone red pen"'
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField 'String', 'TRUST_MANAGER_ALGORITHM', '"X509"'
            buildConfigField 'String', 'SSL_CONTEXT_PROTOCOL', '"TLSv1.2"'
            buildConfigField 'String', 'OPENSRP_TRUSTORE_PASS', '"phone red pen"'
        }
    }

    lint {
        abortOnError false
        checkReleaseBuilds false
    }

    packaging {
        resources {
            excludes += [
                    'META-INF/DEPENDENCIES',
                    'META-INF/DEPENDENCIES.txt',
                    'META-INF/LICENSE',
                    'META-INF/LICENSE.txt',
                    'META-INF/licence.txt',
                    'META-INF/NOTICE',
                    'META-INF/NOTICE.txt',
                    'META-INF/ASL2.0',
                    'META-INF/INDEX.LIST',
                    'LICENSE.txt'
            ]
        }
    }

    testOptions {
        unitTests {
            includeAndroidResources = true
            all {
                jvmArgs(
                        '--add-opens=java.base/java.lang=ALL-UNNAMED',
                        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
                        '--add-opens=java.base/java.io=ALL-UNNAMED',
                        '--add-opens=java.base/java.net=ALL-UNNAMED',
                        '--add-opens=java.base/java.util=ALL-UNNAMED',
                        '--add-opens=java.base/java.text=ALL-UNNAMED',
                        '--add-opens=java.base/java.security=ALL-UNNAMED',
                        '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED',
                        '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
                        '--add-opens=java.base/jdk.internal.util=ALL-UNNAMED',
                        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
                        '--add-opens=java.base/sun.security.util=ALL-UNNAMED',
                        '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED',
                        '--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
                )
                systemProperty 'robolectric.dependency.repo.url', 'https://repo1.maven.org/maven2'
                systemProperty 'robolectric.enabledSdks', '28'
                maxHeapSize = '4g'
            }
        }
    }

    buildFeatures {
        buildConfig = true
    }

    sourceSets {
        main {
            manifest.srcFile 'AndroidManifest.xml'
            java.srcDir 'src/main/java'
            res.srcDirs = ['res']
            assets.srcDir 'assets'
            jniLibs.srcDirs 'src/main/native'
            resources.srcDir 'resources'
        }
        androidTest.setRoot('src/androidTest')
    }

    aaptOptions {
        noCompress 'apk'
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    kotlinOptions {
        jvmTarget = '1.8'
    }

    publishing {
        singleVariant('release') {
            withSourcesJar()
            withJavadocJar()
        }
    }
}

repositories {
    flatDir {
        dirs rootProject.file('libs'), file('libs'), rootProject.projectDir
    }
    mavenLocal()
    google()
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
}

dependencies {
    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.24')
    testImplementation platform('org.jetbrains.kotlin:kotlin-bom:1.9.24')

    implementation 'org.jetbrains.kotlin:kotlin-stdlib'

    implementation 'net.zetetic:android-database-sqlcipher:4.5.4'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'commons-codec:commons-codec:1.16.0'
    implementation 'com.google.guava:guava:33.1.0-android'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'org.mozilla:rhino:1.7.14'
    implementation 'org.ocpsoft.prettytime:prettytime:5.0.6.Final'
    implementation 'io.realm:realm-android-library:10.19.0'
    api 'joda-time:joda-time:2.12.5'
    implementation('com.github.bmelnychuk:atv:1.2.9') {
        exclude group: 'com.google.android', module: 'android'
    }
    implementation('com.github.johnkil.print:print:1.3.1') {
        exclude group: 'com.google.android', module: 'android'
    }
    implementation('ch.acra:acra:4.11.1') {
        exclude group: 'org.json', module: 'json'
    }
    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
    annotationProcessor 'com.jakewharton:butterknife:10.2.3'
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.preference:preference-ktx:1.2.1'
    implementation 'androidx.security:security-crypto:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.material:material:1.12.0'
    implementation('com.evernote:android-job:1.4.3') {
        exclude group: 'com.google.android', module: 'android'
    }
    implementation 'commons-validator:commons-validator:1.7'
    implementation('de.hdodenhof:circleimageview:3.1.0') {
        exclude group: 'com.google.android', module: 'android'
    }
    implementation 'io.github.bluecodesystems:opensrp-client-utils:0.0.6'
    implementation('com.github.BlueCodeSystems:android-p2p-sync:v0.4.3') {
        exclude group: 'net.zetetic', module: 'android-database-sqlcipher'
    }
    implementation 'io.github.bluecodesystems:opensrp-plan-evaluator:1.7.0'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'androidx.room:room-runtime:2.6.1'
    annotationProcessor 'androidx.room:room-compiler:2.6.1'
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    api 'com.jakewharton.timber:timber:5.0.1'
    implementation 'com.google.android.gms:play-services-vision:20.1.3'
    implementation 'com.google.android.gms:play-services-base:18.5.0'
    implementation 'io.github.bluecodesystems:circleprogressbar:1.0.0'
    implementation 'xerces:xercesImpl:2.12.2'
    compileOnly platform('com.google.firebase:firebase-bom:33.5.0')
    compileOnly 'com.google.firebase:firebase-crashlytics'
    compileOnly 'com.google.firebase:firebase-perf'
    def workVersion = '2.9.0'
    implementation "androidx.work:work-runtime:$workVersion"
    implementation fileTree(dir: rootProject.file('libs'), include: ['*.aar', '*.jar'], exclude: ['circleprogressbar*.aar', 'CircleProgressbar*.aar'])
    implementation fileTree(dir: rootProject.projectDir, include: ['*.aar', '*.jar'], exclude: ['circleprogressbar*.aar', 'CircleProgressbar*.aar'])

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    testImplementation 'org.robolectric:robolectric:4.10.3'
    testImplementation 'androidx.test:core:1.5.0'
    testImplementation 'androidx.test.ext:junit:1.1.5'
    testImplementation 'androidx.fragment:fragment-testing:1.7.1'
    testImplementation 'androidx.sqlite:sqlite:2.3.1'
    testImplementation 'net.zetetic:android-database-sqlcipher:4.5.4'
    testImplementation 'org.skyscreamer:jsonassert:1.5.3'
    testAnnotationProcessor 'com.jakewharton:butterknife:10.2.3'
    testImplementation platform('com.google.firebase:firebase-bom:33.5.0')
    testImplementation 'com.google.firebase:firebase-perf'

    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test:core:1.5.0'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'androidx.test:rules:1.5.0'
}

configurations.all {
    resolutionStrategy.force 'commons-codec:commons-codec:1.16.0'
}

tasks.withType(Test).configureEach {
    jacoco {
        includeNoLocationClasses = true
        excludes = ['jdk.internal.*']
    }
    testLogging {
        events "failed"
        exceptionFormat 'full'
        showExceptions true
        showCauses true
        showStackTraces true
    }
}

tasks.register('jacocoTestReport', JacocoReport) {
    dependsOn 'testDebugUnitTest'

    reports {
        xml.required.set(true)
        xml.outputLocation.set(layout.buildDirectory.file('reports/jacoco/jacocoRootReport/merged.xml'))
        html.required.set(true)
        html.outputLocation.set(layout.buildDirectory.dir('reports/jacoco/jacocoRootReport/html'))
    }

    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*', '**/*$ViewBinder*.*']
    def debugTree = fileTree(dir: "$buildDir/intermediates/javac/debug/classes", excludes: fileFilter)
    def mainSrc = "${project.projectDir}/src/main/java"

    sourceDirectories.setFrom(files(mainSrc))
    classDirectories.setFrom(files(debugTree))
    executionData.setFrom(fileTree(dir: buildDir, includes: [
            'jacoco/testDebugUnitTest.exec',
            'outputs/code-coverage/connected/*coverage.ec'
    ]))
}

tasks.coveralls {
    dependsOn 'jacocoTestReport'
}

coveralls {
    jacocoReportPath = file('build/reports/jacoco/jacocoRootReport/merged.xml').path
}

apply from: '../maven.gradle'
